--- a/index.html
+++ b/index.html
@@ -9,17 +9,39 @@
   <link rel="stylesheet" href="styles/icons.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/layout.css">
-<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-  <style>
+  <link rel="stylesheet" href="styles/modules.css">
+
+  <!-- <style>
     #map {
       width: 100%;
       height: 400px;
-      width: 50%;
+      width: 90%;
     }
-  </style>
+  </style> -->
 </head>
 <body>
-  <h3></h3>
+  <header>
+    <h1><a href="">Jobbo - Locate your future job</a></h1>
+    <nav>
+      <ul>
+        <li id="home"><a href="">HOME</a></li>
+        <li><a href="">SEARCH</a></li>
+        <li><a href="">ABOUT US</a></li>
+      </ul>
+    </nav>
+  </header>
+   
+
+    <main>
+    <section id="hero-image" class="content"></section>
+    <section id="greetingPage" class="content"></section>
+    <section id="searchPage" class="content">
+        <form id="search-form">
+          <input type="text" name="location" placeholder="location">   
+          <button type="submit-location">search</button>
+          </form>
+    </section>
+    <section>
     <div id="map"></div>
     <script>
       function initMap() {
@@ -34,11 +56,41 @@
         });
       }
     </script>
+    </section>
+    <section id="aboutUsPage" class="content">
+      <div id="topImage">
+        <img src="img/RyanPic.jpg" alt="Ryan Image" title="Ryan Image" />
+        <h2>Ryan Groesch</h2>
+        <p>Ryan is a left-handed, motorcycle riding, sportsball loving nerd. His interests branch to anything from athletics (baseball, frisbee, football, curling and even cricket) to intellectual endeavors (videogames, reading and thoughtful discussions). Ryan looks to learn something every day and take one step closer to being a "renaissance man".</p>
+        <p class=profileLinks><a href="https://www.linkedin.com/in/ryan-groesch/">Linked-In</a> | <a href="https://github.com/ryan-g13">GitHub</a> | <a href="mailto:ryan.groesch@gmail.com">Email</a></p>
+      </div>
+      <div id="topImage">
+        <img src="img/JoannaPic.png" alt="Joanna Image" title="Joanna Image" />
+        <h2>Joanna Coll</h2>
+        <p>Polish from origin, lived in Ireland and UK before relocating to Seattle with her family 4 years ago. Currently trying to pursue her goal of becoming a Software Dev, but with her love for Python maybe even Data Scientist. Joanna loves to cook and even more to eat, with a passion for gastro-tourism. In a free time she enjoys traveling and volunteer as an event planner.</p>
+        <p class=profileLinks><a href="">Email</a></p>
+      </div>
+      <div id="topImage">
+        <img src="img/CollinPic.jpg" alt="Collin Image" title="Collin Image" />
+        <h2>Collin Meredith</h2>
+        <p></p>
+        <p class=profileLinks><a href="">Email</a></p>
+      </div>
+      <div id="topImage">
+        <img src="" alt="Scott Image" title="Scott Image" />
+        <h2>Scott Thompson</h2>
+        <p></p>
+        <p class=profileLinks><a href="">Email</a></p>
+      </div>
+    </section>
+    
+  </main>
+   
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfL336O08zBiCPdcVijYcL6APg0_0UJY&callback=initMap">
     </script>
    
-   
+   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
    <script src="scripts/views/greetingPage.js" type="text/javascript"></script>
    <script src="scripts/views/mainPage.js" type="text/javascript"></script>
    <script src="scripts/views/mapView.js" type="text/javascript"></script>
