--- a/index.html
+++ b/index.html
@@ -10,36 +10,45 @@
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/modules.css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <script type="text/x-handlebars-template" id="">
+   
+  </script>
 
-  <!-- <style>
-    #map {
-      width: 100%;
-      height: 400px;
-      width: 90%;
-    }
-  </style> -->
 </head>
 <body>
   <header>
-    <h1><a href="">Jobbo - Locate your future job</a></h1>
-    <nav>
+    <div><h1 id="logo"><a href=""> <strong>Play&Rest</strong></a></h1></div>
+  <div><nav>
       <ul>
         <li id="home"><a href="">HOME</a></li>
         <li><a href="">SEARCH</a></li>
         <li><a href="">ABOUT US</a></li>
       </ul>
-    </nav>
+    </nav></div>
   </header>
    
 
-    <main>
+  <main>
+
     <section id="hero-image" class="content"></section>
     <section id="greetingPage" class="content"></section>
     <section id="searchPage" class="content">
         <form id="search-form">
           <input type="text" name="location" placeholder="location">   
           <button type="submit-location">search</button>
-          </form>
+        </form>
+    </section>
+    <section id="activities" class="tab-content">
+      <div>
+        <ul id="filters">
+          <li>
+            <select id="activity-filter">
+              <option value="">-- Filter by Type --</option>
+            </select>
+          </li>
+        </ul>
+      </div>
     </section>
     <section>
     <div id="map"></div>
@@ -89,8 +98,12 @@
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfL336O08zBiCPdcVijYcL6APg0_0UJY&callback=initMap">
     </script>
-   
+   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+   
+   <script src="scripts/models/page.js" type="text/javascript"></script>
    <script src="scripts/views/greetingPage.js" type="text/javascript"></script>
    <script src="scripts/views/mainPage.js" type="text/javascript"></script>
    <script src="scripts/views/mapView.js" type="text/javascript"></script>
