--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/layout.css">
   <link rel="stylesheet" href="styles/modules.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister" rel="stylesheet">
   <script type="text/x-handlebars-template" id="about-us-template">
 
     <div class="template-d">
@@ -76,7 +76,7 @@
     
   </main>
   <footer>
-    <div>&copy; Copyright 2018</div>
+    <div>&copy; Copyright 2018 (Seattle data only)</div>
   </footer>
   
 
