--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="template-d">
       <img src="{{image_url}}" alt="{{name}} Image" title="{{name}} Image" />
       <h2>{{name}}</h2>
-      <p>{{bio}}</p>
-      <p class=profileLinks><a href="{{linkedin_url}}">Linked-In</a> | <a href="{{github_url}}">GitHub</a> | <a href="mailto:{{email}}">Email</a></p>
+      <p class="bio">{{bio}}</p>
+      <p class="bio" class=profileLinks><a href="{{linkedin_url}}">Linked-In</a> | <a href="{{github_url}}">GitHub</a> | <a href="mailto:{{email}}">Email</a></p>
     </div>
   </script>
 </head>
@@ -64,7 +64,7 @@
 
     </section>
 
-    <input id="autocomplete" class="controls" type="text" placeholder="search a location">  
+    <input id="autocomplete" class="content" class="controls" type="text" placeholder="search a location">  
     
     <section class="content">
 
