meta tag og addition

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Play&Rest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:url"                content="https://final-project-301.github.io/client-side/" />
+  <meta property="og:title"              content="Play&Rest" />
+  <meta property="og:description"        content="A mobile friendly application that is designed to help locate nearby parks and water access points." />
+  <meta property="og:image"              content="img/pic1.jpeg" />
+  <meta property="og:type"               content="application/javascript" />
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/layout.css">
