added img og properties

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US" xmlns:og="http://opengraphprotocol.org/schema/">
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Play&Rest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <meta property="og:title" content="Play&Rest" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://final-project-301.github.io/client-side/" />
   <meta property="og:image" content="https://final-project-301.github.io/client-side/img/pic1.jpeg" />
   <meta property="og:description" content="A mobile friendly application that is designed to help locate nearby parks and water access points." />
-  
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="960"/>
+  <meta property="og:image:height" content="480"/>
+
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/layout.css">
