--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
 
     </section>
 
+    <div id="autoDiv">
     <input id="autocomplete" class="content" class="controls" type="text" placeholder="search a location">  
+    </div>
     
     <section class="content">
 
+      <div id="map"></div>
+
       <div id="legend"><h3>Legend</h3></div>
 
-      <div id="map"></div>
     </section>
 
     <section id="aboutUsPage" class="content"> </section>
