button and references

--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     </section>
 
     <section id="aboutUsPage" class="content"> </section>
-    <section class="content" id="references"> <p>City of Seattle Community Data APIs:</p><br>
+    <section class="content" id="references"><br> <p>City of Seattle Community Data APIs:</p><br>
       <ul>
       <li>Children's Play Areas: https://data.seattle.gov/resource/mnai-wmyz.json </li>
       <li>Off Leash Dog Parks: https://data.seattle.gov/resource/ituq-7zbq.json </li>
-      <li>  Waterfront Access: https://data.seattle.gov/resource/ebpc-weez.json
-        and  Google Maps Javascript API: https://developers.google.com/maps/documentation/javascript/ </li>
+      <li>  Waterfront Access: https://data.seattle.gov/resource/ebpc-weez.json</li>
+      <li>Google Maps Javascript API: https://developers.google.com/maps/documentation/javascript/ </li>
       <li>  Google Places Javascript API: https://developers.google.com/places/javascript/ </li>
       </ul>
     </section>
