--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
     </section>
 
     <section id="aboutUsPage" class="content"> </section>
-    <section class="content" id="references"><br> <p>City of Seattle Community Data APIs:</p><br>
+    <section class="content" id="references"><br> <strong>City of Seattle Community Data APIs:</strong><br>
       <ul>
       <li>Children's Play Areas: https://data.seattle.gov/resource/mnai-wmyz.json </li>
       <li>Off Leash Dog Parks: https://data.seattle.gov/resource/ituq-7zbq.json </li>
-      <li>  Waterfront Access: https://data.seattle.gov/resource/ebpc-weez.json</li>
-      <li>Google Maps Javascript API: https://developers.google.com/maps/documentation/javascript/ </li>
-      <li>  Google Places Javascript API: https://developers.google.com/places/javascript/ </li>
+      <li> Waterfront Access: https://data.seattle.gov/resource/ebpc-weez.json</li>
+      <br>
+      <li><strong>Google Maps</strong> Javascript API: https://developers.google.com/maps/documentation/javascript/ </li>
+      <li> <strong>Google Places</strong> Javascript API: https://developers.google.com/places/javascript/ </li>
       </ul>
     </section>
   </main>
