--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US" xmlns:og="http://opengraphprotocol.org/schema/">
 <head>
+  <base href="https://final-project-301.github.io/client-side/">
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Play&Rest</title>
