--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
   <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
   
-  <script src="./scripts/views/aboutUs.js" type="text/javascript"></script>
-  <script src="./scripts/views/mainPage.js" type="text/javascript"></script>
+  <script src="scripts/views/aboutUs.js" type="text/javascript"></script>
+  <script src="scripts/views/mainPage.js" type="text/javascript"></script>
   
   <script async defer
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfL336O08zBiCPdcVijYcL6APg0_0UJY&libraries=places&callback=initMap">
       type="text/javascript"
   </script>
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-  <script src="./scripts/models/page.js" type="text/javascript"></script>
-  <script src="./scripts/views/mapView.js" type="text/javascript"></script>
-  <script async defer src="./scripts/views/routes.js" type="text/javascript"></script>
+  <script src="scripts/models/page.js" type="text/javascript"></script>
+  <script src="scripts/views/mapView.js" type="text/javascript"></script>
+  <script async defer src="scripts/views/routes.js" type="text/javascript"></script>
   
 </body>
 </html>
