--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="template-d">
       <img class="bioImage" src="{{image_url}}" alt="{{name}} Image" title="{{name}} Image" />
       <h2>{{name}}</h2>
-      <p class="bio">{{bio}}</p>
+      <p class="bio" id="makeTextBigger">{{bio}}</p>
       <p class="bio" class=profileLinks><a href="{{linkedin_url}}">Linked-In</a> | <a href="{{github_url}}">GitHub</a> | <a href="mailto:{{email}}">Email</a></p>
     </div>
   </script>
